--- a/dragon ball.html
+++ b/dragon ball.html
@@ -59,7 +59,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand" href="#">Inicio</a>
+            <a class="navbar-brand" href="index.html">Inicio</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Peliculas</a>
@@ -77,44 +77,60 @@
       </nav>
     </nav>
     <main class="container">
-      <div class="card" style="width: 18rem;">
-        <img src="assets/img/dbsuper.jpg" class="card-img-top" alt="dragon-ball-super">
-        <div class="card-body">
-          <h5 class="card-title">DRAGON BALL SUPER</h5>
-          <p class="card-text">después de la batalla contra Majin-Boo. La serie recuenta los acontecimientos de las películas de Dragon Ball Z: La batalla de los dioses</p>
-          <a href="dragon ball.html" class="btn btn-primary">VER</a>
+      <div class="card mb-3" style="max-width: 640px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="assets/img/dbsuper.jpg" class="img-fluid rounded-start" alt="dragon-ball-super">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">DRAGON BALL SUPER</h5>
+              <p class="card-text">Su trama describe las aventuras de Gokū, un guerrero saiyajin, experto en artes marciales que en su infancia inicia sus viajes y aventuras en las que pone a prueba y mejora sus habilidades de pelea, enfrentando oponentes y protegiendo a la Tierra de otros seres que quieren conquistarla y exterminar a la humanidad.</p>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
-        <img src="assets/img/origen.jpg" class="card-img-top" alt="el-origen">
-        <div class="card-body">
-          <h5 class="card-title">INCEPTION</h5>
-          <p class="card-text">Dom Cobb es un ladrón capaz de adentrarse en los sueños de la gente y hacerse con sus secretos. Sin embargo, ahora tiene que llevar a cabo una misión diferente.</p>
-          <a href="#" class="btn btn-primary">VER</a>
+      <div class="card text-bg-dark">
+        <img src="assets/img/bills.png" class="card-img" alt="dbsuper-bills">
+        <div class="card-img-overlay">
+          <h5 class="card-title">EL DIÓS DE LA DESTRUCCIÓN BILLS</h5>
+          <p class="card-text">Mientras Kaio-shin Anciano esta tomando té con Kibito-shin siente un planeta desaparecer y le dice a Kibito-shin que era obra de Beerus, el dios de la destrucción. Mientras Beerus ve la destrucción del planeta, recuerda acerca de su sueño y desea saber mas sobre el Supersaiyano Dios.</p>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
-        <img src="assets/img/totoro1.jpg" class="card-img-top" alt="totoro">
-        <div class="card-body">
-          <h5 class="card-title">MI VECINO TOTORO</h5>
-          <p class="card-text">Una familia japonesa se traslada al campo. Las dos hijas se encuentran con un espíritu llamado Totoro, que habita en el bosque. Junto a él, comparten mágicas aventuras.</p>
-          <a href="#" class="btn btn-primary">VER</a>
+      <div class="card text-bg-dark">
+        <img src="assets/img/dbsuper-freezer.jpg" class="card-img" alt="dbsuper-freezer">
+        <div class="card-img-overlay">
+          <h5 class="card-title">LA RESURRECCION DE FREEZER</h5>
+          <p class="card-text">La banda de Pilaf logra reunir las siete esferas del Dragón. Sin embargo, Sorbet, el heredero del ejército de Freezer, decide revivir a este último robándose las esferas. Sorbet obliga a Pilaf invocar a Shen Long, quien revive a Freezer.</p>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
-        <img src="assets/img/godzilla.jpg" class="card-img-top" alt="godzilla">
-        <div class="card-body">
-          <h5 class="card-title">GODZILLA KING OF MONSTER</h5>
-          <p class="card-text">Seguimos las aventuras de unos criptzóologos mientras tratan de enfrentarse a monstruos entre los que se encuentra Godzilla.</p>
-          <a href="#" class="btn btn-primary">VER</a>
+      <div class="card text-bg-dark">
+        <img src="assets/img/bills-champa.jpg" class="card-img" alt="dbsuper-champa">
+        <div class="card-img-overlay">
+          <h5 class="card-title">TORNEO DEL 6TO UNIVERSO</h5>
+          <p class="card-text">Después de un tiempo, Goku y Vegeta vuelven al planeta de Beerus para seguir su entrenamiento, de pronto aparece Champa y su asistente Vados del Universo 6.</p>
+        </div>
+      </div>
+      <div class="card text-bg-dark">
+        <img src="assets/img/dbsuper-black.jpg" class="card-img" alt="dbsuper-black">
+        <div class="card-img-overlay">
+          <h5 class="card-title">BLACK GOKU</h5>
+          <p class="card-text">En la línea alternativa de Trunks del futuro, tanto éste como Bulma del futuro y Mai del futuro son los únicos sobrevivientes luego de la aparición de un enemigo nombrado por los sobrevivientes como "Black".</p>
+        </div>
+      </div>
+      <div class="card text-bg-dark">
+        <img src="assets/img/dbsuper-12-universos.jpg" class="card-img" alt="dbsuper-12-universos">
+        <div class="card-img-overlay">
+          <h5 class="card-title">TORNEO DE LOS 12 UNIVERSOS</h5>
+          <p class="card-text">Después de los sucesos del Arco de Trunks del "Futuro", acontecerá un torneo que marcará la destrucción de los universos. A petición de Son Goku, los Reyes de Todo, del presente y del futuro alternativo, iniciarán el Torneo de la Fuerza.</p>
         </div>
       </div>
     </main>
     <footer class="container-sm">
       <div class="card text-center">
-        <div class="card-header">INFORMACIÓN</div>
+        <div class="card-header">DONDE VER</div>
         <div class="card-body">
-          <h5 class="card-title">VISITANOS EN:</h5>
+          <h5 class="card-title">LINK:</h5>
           <p class="card-text">seriesypeliculasparatodos.com</p>
           <a href="#" class="btn btn-primary">Da click aqui</a>
         </div>
