--- a/totoro.html
+++ b/totoro.html
@@ -59,7 +59,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand" href="#">Inicio</a>
+            <a class="navbar-brand" href="index.html">Inicio</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Peliculas</a>
@@ -77,44 +77,34 @@
       </nav>
     </nav>
     <main class="container">
-      <div class="card" style="width: 18rem;">
-        <img src="assets/img/dbsuper.jpg" class="card-img-top" alt="dragon-ball-super">
-        <div class="card-body">
-          <h5 class="card-title">DRAGON BALL SUPER</h5>
-          <p class="card-text">después de la batalla contra Majin-Boo. La serie recuenta los acontecimientos de las películas de Dragon Ball Z: La batalla de los dioses</p>
-          <a href="dragon ball.html" class="btn btn-primary">VER</a>
+      <div class="card mb-3" style="max-width: 640px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="assets/img/totoro1.jpg" class="img-fluid rounded-start" alt="totoro1">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">MI VECINO</h5>
+              <p class="card-text">Dos niñas, Satsuki de 11 años y su hermana Mei de 4 años, se mudan a una casa con su padre para estar más cerca de su madre hospitalizada. Satsuki y Mei descubren que el bosque cercano está habitado por criaturas mágicas, llamadas Totoros. Pronto se hacen amigos de estos Totoros y tienen varias aventuras mágicas.</p>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
-        <img src="assets/img/origen.jpg" class="card-img-top" alt="el-origen">
-        <div class="card-body">
-          <h5 class="card-title">INCEPTION</h5>
-          <p class="card-text">Dom Cobb es un ladrón capaz de adentrarse en los sueños de la gente y hacerse con sus secretos. Sin embargo, ahora tiene que llevar a cabo una misión diferente.</p>
-          <a href="inception.html" class="btn btn-primary">VER</a>
-        </div>
+      <div class="card text-bg-dark">
+        <img src="assets/img/totoro2.jpg" class="card-img" alt="totoro2">
       </div>
-      <div class="card" style="width: 18rem;">
-        <img src="assets/img/totoro1.jpg" class="card-img-top" alt="totoro">
-        <div class="card-body">
-          <h5 class="card-title">MI VECINO TOTORO</h5>
-          <p class="card-text">Una familia japonesa se traslada al campo. Las dos hijas se encuentran con un espíritu llamado Totoro, que habita en el bosque. Junto a él, comparten mágicas aventuras.</p>
-          <a href="totoro.html" class="btn btn-primary">VER</a>
-        </div>
+      <div class="card text-bg-dark">
+        <img src="assets/img/totoro3.jpg" class="card-img" alt="totoro3">
       </div>
-      <div class="card" style="width: 18rem;">
-        <img src="assets/img/godzilla.jpg" class="card-img-top" alt="godzilla">
-        <div class="card-body">
-          <h5 class="card-title">GODZILLA KING OF MONSTER</h5>
-          <p class="card-text">Seguimos las aventuras de unos criptzóologos mientras tratan de enfrentarse a monstruos entre los que se encuentra Godzilla.</p>
-          <a href="#" class="btn btn-primary">VER</a>
-        </div>
+      <div class="card text-bg-dark">
+        <img src="assets/img/totoro4.JPG" class="card-img" alt="totoro4">
       </div>
     </main>
     <footer class="container-sm">
       <div class="card text-center">
-        <div class="card-header">INFORMACIÓN</div>
+        <div class="card-header">DONDE VER</div>
         <div class="card-body">
-          <h5 class="card-title">VISITANOS EN:</h5>
+          <h5 class="card-title">LINK:</h5>
           <p class="card-text">seriesypeliculasparatodos.com</p>
           <a href="#" class="btn btn-primary">Da click aqui</a>
         </div>
