--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand" href="#">Inicio</a>
+            <a class="navbar-brand" href="index.html">Inicio</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Peliculas</a>
+                <a class="nav-link active" aria-current="page" href="peliculas.html">Peliculas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Series</a>
+                <a class="nav-link" href="series.html">Series</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -106,7 +106,7 @@
         <div class="card-body">
           <h5 class="card-title">GODZILLA KING OF MONSTER</h5>
           <p class="card-text">Seguimos las aventuras de unos criptzóologos mientras tratan de enfrentarse a monstruos entre los que se encuentra Godzilla.</p>
-          <a href="#" class="btn btn-primary">VER</a>
+          <a href="godzilla.html" class="btn btn-primary">VER</a>
         </div>
       </div>
     </main>
