--- a/dragon ball.html
+++ b/dragon ball.html
@@ -62,10 +62,10 @@
             <a class="navbar-brand" href="index.html">Inicio</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Peliculas</a>
+                <a class="nav-link active" aria-current="page" href="peliculas.html">Peliculas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Series</a>
+                <a class="nav-link" href="series.html">Series</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
