--- a/godzilla.html
+++ b/godzilla.html
@@ -80,24 +80,24 @@
       <div class="card mb-3" style="max-width: 640px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="assets/img/totoro1.jpg" class="img-fluid rounded-start" alt="totoro1">
+            <img src="assets/img/godzilla.jpg" class="img-fluid rounded-start" alt="totoro1">
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">MI VECINO TOTORO</h5>
-              <p class="card-text">Dos niñas, Satsuki de 11 años y su hermana Mei de 4 años, se mudan a una casa con su padre para estar más cerca de su madre hospitalizada. Satsuki y Mei descubren que el bosque cercano está habitado por criaturas mágicas, llamadas Totoros. Pronto se hacen amigos de estos Totoros y tienen varias aventuras mágicas.</p>
+              <h5 class="card-title">GODZILLA KING OF MONSTER</h5>
+              <p class="card-text">La nueva historia sigue los esfuerzos heroicos de la agencia criptozoológica Monarch mientras sus miembros se enfrentan a monstruos titánicos, incluyendo al imponente Godzilla, quien colisiona con Mothra, Rodan y su némesis, el dragón de tres cabezas Ghidorah. Cuando estas antiguas súper especies ancestrales —pensadas como mitos— aparezcan de nuevo, competirán por la supremacía, dejando la propia existencia de la humanidad pendiente de un hilo.</p>
             </div>
           </div>
         </div>
       </div>
       <div class="card text-bg-dark">
-        <img src="assets/img/totoro2.jpg" class="card-img" alt="totoro2">
+        <img src="assets/img/godzilla1.JPG" class="card-img" alt="godzilla1">
       </div>
       <div class="card text-bg-dark">
-        <img src="assets/img/totoro3.jpg" class="card-img" alt="totoro3">
+        <img src="assets/img/godzilla2.jpg" class="card-img" alt="godzilla2">
       </div>
       <div class="card text-bg-dark">
-        <img src="assets/img/totoro4.JPG" class="card-img" alt="totoro4">
+        <img src="assets/img/godzilla3.jpg" class="card-img" alt="godzilla3">
       </div>
     </main>
     <footer class="container-sm">
