--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img src="assets/img/dragon-ball.jpg" class="d-block" alt="dragon-ball">
             <div class="carousel-caption d-none d-md-block">
               <h1 class="carousel-text">DRAGON BALL SUPER</h1>
-              <p  class="carousel-text2">Una fantastica aventura te espera</p>
+              <p  class="carousel-text2">ACOMPAÑA A GOKU Y A SUS AMIGOS</p>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="2000">
